# airflow

./: .gitignore  Dockerfile  airflow.cfg  docker-compose.yaml  pyproject.toml  user_auth.py  webserver_config.py
.github/workflows/: docker.yml  update.sh  update.yaml
dags/: download_thread_dev.py  download_thread_dev_v2.py  get_notebook_from_gitrepo.py  ipython2cwl.py  notebook2mint.py  run_cwl.py  test_mail.py
tests/cwl/: test_cwltool.py  test_singularity.py
tests/cwl/aquifer/: cwl.yml  values.json
tests/cwl/simple/: hello.tar  tar.cwl  values.json
