[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Maximilinano Osorio <mosorio@isi.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "2.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
